--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box; }
 
-har1, har2, har3, har4, har5, har6 {
+#har1, #har2, #har3, #har4, #har5, #har6 {
   display:none;
 }
 
