--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -3,7 +3,7 @@
 
 #logotaboo {
   filter: invert(100%);
-  display:none;
+  filter: grayscale(100%);
 }
 
 #har1, #har2, #har3, #har4, #har5, #har6 {
