--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -2,6 +2,7 @@
   box-sizing: border-box; }
 
 #logotaboo {
+  -webkit-filter: invert(100%);
   filter: invert(100%);
   filter: grayscale(100%);
 }
